--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.844.0",
     "@strapi/plugin-cloud": "5.17.0",
     "@strapi/plugin-users-permissions": "5.17.0",
-    "@strapi/provider-upload-aws-s3": "^5.17.0",
+    "@strapi/provider-upload-aws-s3": "^5.18.0",
     "@strapi/strapi": "5.17.0",
     "aws-sdk": "^2.1692.0",
     "better-sqlite3": "11.3.0",
+    "dotenv": "^17.2.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "react": "^18.0.0",
