🔧 Remove env_file from docker-compose.coolify.yml
Coolify injects environment variables directly via the environment: section.
The env_file directive was trying to load from a non-existent file in the container,
preventing environment variables from being properly passed to the application.

Fix: Remove env_file directive and rely on Coolify's direct variable injection.

--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -25,10 +25,8 @@ services:
     container_name: promoatlas-backend
     restart: unless-stopped
 
-    # Load environment from .env.docker for local testing
-    # In Coolify, environment variables are injected directly
-    env_file:
-      - ./backend/.env.docker
+    # Environment variables are injected directly by Coolify
+    # No env_file needed - Coolify uses the environment: section below
 
     # Expose Strapi on port 1337
     ports:
