--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -125,8 +125,8 @@ services:
 # ============================================
 networks:
   promoatlas:
-    driver: bridge
-    name: promoatlas-network
+    external: true
+    name: coolify  # Use Coolify's network for reverse proxy routing
 
 # ============================================
 # Notes:
