🔧 Fix Coolify networking: use expose instead of ports
- Changes ports mapping to expose directive
- Allows Coolify reverse proxy to handle port exposure
- Fixes 'page not found' issue after deployment

--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -32,8 +32,9 @@ services:
       - "coolify.managed=true"
 
     # Expose Strapi on port 1337
-    ports:
-      - "1337:1337"
+    # Note: Coolify handles port exposure automatically
+    expose:
+      - "1337"
 
     # Health check for Strapi (waits 90s for full startup)
     # Using 127.0.0.1 to avoid IPv6 issues, any HTTP response means server is up
