--- a/backend/.env.example
+++ b/backend/.env.example
@@ -56,5 +56,18 @@ MEILISEARCH_ADMIN_KEY=your_meilisearch_admin_api_key
 MEILISEARCH_SEARCH_KEY=your_meilisearch_search_api_key
 MEILISEARCH_INDEX_NAME=products
 
+# Google Gemini File Search (RAG)
+# Google Cloud project details and Gemini API key for File Search integration
+# Get API key from: https://aistudio.google.com/app/apikey
+# Create File Search store at: https://console.cloud.google.com/
+GOOGLE_CLOUD_PROJECT=your_google_cloud_project_id
+GOOGLE_CLOUD_PROJECT_NUMBER=your_project_number
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_FILE_SEARCH_STORE_NAME=your_file_search_store_name
+
+# BullMQ Gemini Sync Configuration (Optional - defaults provided)
+BULLMQ_CONCURRENCY_GEMINI=5
+BULLMQ_JOB_TIMEOUT_GEMINI=120000
+
 # Environment
 NODE_ENV=development
