--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "@aws-sdk/client-s3": "^3.844.0",
     "@bull-board/api": "^6.14.1",
     "@bull-board/koa": "^6.14.1",
+    "@google-ai/generativelanguage": "^3.5.0",
+    "@google/genai": "^1.30.0",
     "@strapi/plugin-cloud": "5.17.0",
     "@strapi/plugin-users-permissions": "5.17.0",
     "@strapi/provider-upload-aws-s3": "^5.18.0",
