feat: add Jest testing and secure file handling
- Install Jest and ts-jest for TypeScript testing
- Add 13 unit tests for product transformers (100% passing)
- Secure temp file creation with 0o600 permissions
- Guarantee file cleanup with try-finally blocks

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.844.0",
@@ -40,9 +43,12 @@
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5"
   },
   "engines": {
