feat: add API documentation, circuit breakers, and error sanitization
- Install and configure @strapi/plugin-documentation
- Add OpenAPI/Swagger annotations to Gemini sync routes
- Create resilient HTTP client with axios-retry (exponential backoff)
- Implement error sanitization utility for production safety
- Update controllers to use sanitized error responses
- All 13 tests still passing

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,13 @@
     "@google-ai/generativelanguage": "^3.5.0",
     "@google/genai": "^1.30.0",
     "@strapi/plugin-cloud": "5.17.0",
+    "@strapi/plugin-documentation": "^5.31.2",
     "@strapi/plugin-users-permissions": "5.17.0",
     "@strapi/provider-upload-aws-s3": "^5.18.0",
     "@strapi/strapi": "5.17.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.2",
+    "axios-retry": "^4.5.0",
     "better-sqlite3": "11.3.0",
     "bullmq": "^5.0.0",
     "dotenv": "^17.2.0",
