--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "recharts": "^3.6.0",
     "strapi-plugin-meilisearch": "^0.13.4",
     "strapi-provider-cloudflare-r2": "^0.3.0",
     "styled-components": "^6.0.0"
